--- a/README.org
+++ b/README.org
@@ -4,6 +4,15 @@ Utilidades para manejar la base de datos MongoDB proporcionada por OpenFoodFacts
 
 * Instalación
 Tras descargar la base de datos MongoDDB:
+** Carga de datos desde .bson
+    Se requiere el fichero de volcado <fichero.bson> y el fichero
+    <fichero.metadata.json> en el que se indican los índices.
+
+    Se pueden definir parámetros de conexión adicionales host, puerto, usuario, password, ...
+
+    #+BEGIN_SRC sh
+   mongorestore -d <db_name> -c <collection_name> </path/<fichero.bson>
+    #+END_SRC
 
 ** Personalizar la configuración:
 [[file:conf_off.sh][Fichero con variables de Configuración usadas por otros scripts]]
